changes' is much more useful than 'misc edits' or 'code cleanup'.
3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++

------------------------------------------------------------------------------
Changes for 0.95.6:

server/monster.c:  Patch by Neil Muller so that corrupt/bad @match entries
will not cause the server to crash.  Applied by MSW 6/21/2000

lib/archetypes: rebuilt for 0.95.6
lib/collect.pl:  Modify to search the archetypes directories in alphabetical
order - before I believe they were collected in basically inode order.
This should make it easier to multiple people to run the collect script
not have basically an entirely new archetyeps file.  MSW 6/21/2000

server/commands.c; server/c_object.c: dump_object_from_tag():  Removed
broken command.  Fixes server crashes very easily triggered by players.
- Jan Echternach 6/21/2000

server/attack.c: deathstrike_player():  Check for def_lev == 0 very early
(and print error message if we find such an invalid level).  Should fix
server crash in case archetypes or maps get broken again in that an
alive object has level < 1.  - Jan Echternach 6/21/2000

Makefile.in: Update version to 0.95.6
include/patchlevel.h: Update to .6 for 0.95.6 release
common/porting.c, include/config.h, include/loader.h, include/skills.h, 
include/spells.h, include/treasure.h, include/version.h, random_maps/style.c:
    Update my mail address and copyright date.  Mostly committed to sync
    up my data with the CVS repository - MSW 6/20/2000

random_maps/treasure.c server/apply.c:  made containers able to
have more than one treasure in them, made a fix to treasure.c, which would
change the options given to it in an unintended way.  --PeterM 6/20/2000

