@@ -17,6 +17,10 @@ small - this just lets others know that the file has changed if nothing
 else.  With this, include the file(s) that you changed.
 ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
 
+server/player.c: check_pick():  Rewrite of this function to consistently
+skip items that can't be picked up, and to only use a single loop over all
+items on the map square.  - Jan Echternach 6/23/2000
+
 ------------------------------------------------------------------------------
 Changes for 0.95.6:
 
